hphp/test/slow/enum-invalid-base/maybe_float.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/maybe_float.php on line 3
